# MARKETMIND

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile.frontend  Jenkinsfile  README.md  docker-compose.yml  index.html  install-alb-controller.ps1  install-alb-controller.sh  jenkins-setup.sh  nginx.conf  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vercel.json  vite.config.js
api/: python_app.py
backend_fastapi/: .dockerignore  .env  .env.example  Dockerfile  agent.py  dgcgru.py  error_trace.txt  gcnattn_layers.py  groq_raw_test.py  main.py  ml_utils.py  requirements.txt  stream_debug.txt  stream_debug_2.txt  stream_debug_3.txt  stream_debug_4.txt  stream_debug_5.txt  stream_debug_6.txt
backend_fastapi/data/: memory.sqlite-shm  memory.sqlite-wal
backend_fastapi/models/gcnattn/: model_gcnattn_stock0_vmd0.keras  (+97 more)
infra/: alb_controller.tf  db_cache.tf  ecr.tf  eks.tf  iam_s3.tf  variables.tf  vpc.tf
infra/envs/: prod.tfvars
k8s/: namespace.yaml
k8s/auth-api/: deployment.yaml
k8s/frontend/: deployment.yaml
k8s/ingress/: alb-ingress.yaml
k8s/ml-api/: deployment.yaml  service-account.yaml
server/: db.js  index.js  package.json  seed.js
server/models/: News.js  Stock.js  User.js
server/routes/: auth.js  news.js  stocks.js
src/: App.jsx  index.css  main.jsx
src/contexts/: AuthContext.jsx  ThemeContext.jsx
src/data/: mockStocks.js
src/hooks/: useClickOutside.js  useNewsData.js  useStockData.js
src/pages/: Assistant.jsx  Auth.jsx  Dashboard.jsx  Index.jsx  News.jsx  NotFound.jsx  Predictions.jsx  SectorHeatmap.jsx
(+137 files in other folders)
